@@ -1927,6 +1927,48 @@ open_in_or_pipe (FILE **f_ptr, int filefmt, const_string fopen_mode)
     return open_input(f_ptr,filefmt,fopen_mode) ;
 }
 
+#ifdef XeTeX
+boolean
+u_open_in_or_pipe(unicodefile* f, integer filefmt, const_string fopen_mode, integer mode, integer encodingData)
+{
+    string fname = NULL;
+    int i; /* iterator */
+
+    /* opening a read pipe is straightforward, only have to
+       skip past the pipe symbol in the file name. filename
+       quoting is assumed to happen elsewhere (it does :-)) */
+
+    if (shellenabledp && *(nameoffile+1) == '|') {
+      /* the user requested a pipe */
+      *f = malloc(sizeof(UFILE));
+      (*f)->encodingMode = (mode == AUTO) ? UTF8 : mode;
+      (*f)->conversionData = 0;
+      (*f)->savedChar = -1;
+      (*f)->skipNextLF = 0;
+      (*f)->f = NULL;
+      fname = xmalloc(strlen((const_string)(nameoffile+1))+1);
+      strcpy(fname,(const_string)(nameoffile+1));
+      recorder_record_input (fname + 1);
+      (*f)->f = runpopen(fname+1,"r");
+      free(fname);
+      for (i=0; i<NUM_PIPES; i++) {
+        if (pipes[i]==NULL) {
+          pipes[i] = (*f)->f;
+          break;
+        }
+      }
+      if ((*f)->f)
+        setvbuf ((*f)->f,NULL,_IONBF,0);
+#ifdef WIN32
+      Poptr = (*f)->f;
+#endif
+
+      return (*f)->f != NULL;
+    }
+
+    return u_open_in(f, filefmt, fopen_mode, mode, encodingData);
+}
+#endif
 
 boolean
 open_out_or_pipe (FILE **f_ptr, const_string fopen_mode)
