@@ -242,7 +242,12 @@ extern void topenin (void);
 #endif
 
 #ifdef XeTeX
+#if ENABLE_PIPES
+extern boolean u_open_in_or_pipe(unicodefile* f, integer filefmt, const_string fopen_mode, integer mode, integer encodingData);
+#define uopenin(f,p,m,d) u_open_in_or_pipe(&(f), p, FOPEN_RBIN_MODE, m, d)
+#else
 #define uopenin(f,p,m,d) u_open_in(&(f), p, FOPEN_RBIN_MODE, m, d)
+#endif
 #endif
 
 /* Used in tex.ch (section 1338) to get a core dump in debugging mode.  */
