@@ -146,10 +146,15 @@ void initversionstring(char **versions)
 	int	fc_version = FcGetVersion();
 #endif
 	FT_Int	ftMajor, ftMinor, ftPatch;
-	int     grMajor, grMinor, grBugfix;
+	int	grMajor, grMinor, grBugfix;
+	UVersionInfo icuVersion;
+	char icu_version[U_MAX_VERSION_STRING_LENGTH] = "";
+
+	u_getVersion(icuVersion);
+	u_versionToString(icuVersion, icu_version);
 
 	const_string fmt =
-		"Compiled with ICU version %s\n"
+		"Compiled with ICU version %s; using %s\n"
 		"Compiled with zlib version %s; using %s\n"
 		"Compiled with FreeType2 version %d.%d.%d; using %d.%d.%d\n"
 		"Compiled with Graphite2 version %d.%d.%d; using %d.%d.%d\n"
@@ -165,6 +170,7 @@ void initversionstring(char **versions)
 
 	int	len = strlen(fmt)
 			+ strlen(U_ICU_VERSION)
+			+ strlen(icu_version)
 			+ strlen(ZLIB_VERSION)
 			+ strlen(zlib_version)
 			+ strlen(HB_VERSION_STRING)
@@ -187,10 +193,11 @@ void initversionstring(char **versions)
 		exit(9);
 	}
 	FT_Library_Version(gFreeTypeLibrary, &ftMajor, &ftMinor, &ftPatch);
+
 	gr_engine_version(&grMajor, &grMinor, &grBugfix);
 
     (void)sprintf(*versions, fmt,
-		U_ICU_VERSION,
+		U_ICU_VERSION, icu_version,
 		ZLIB_VERSION, zlib_version,
 		FREETYPE_MAJOR, FREETYPE_MINOR, FREETYPE_PATCH,
 		ftMajor, ftMinor, ftPatch,
